--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ fastlane/test_output
 
 iOSInjectionProject/
 
+Navigation/Navigation/Navigation.xcodeproj/project.xcworkspace/contents.xcworkspacedata
